fixes validations